fixed mobile section two overflow issue

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -84,16 +84,16 @@ html, body {
 	background: gray url('../img/texture/textured_background.png') repeat center;
 	background-attachment: fixed;
 	width: 100vw;
-	height: 140vh;
-	overflow: auto;
+	/*height: 140vh;*/
+	/*overflow: auto;*/
 }
 @media only screen and (max-width: 500px) {
     #sectionTwo{
 		background: gray url('../img/texture/textured_background.png') repeat center;
 		background-attachment: fixed;
 		width: 100vw;
-		height: 130vh;
-		overflow: auto;
+		/*height: 130vh;*/
+		/*overflow: auto;*/
 	}
 }
 #thomasImage{
@@ -134,6 +134,7 @@ html, body {
 	position: relative;
 	left: 50%;
 	top: 15vh;
+	margin-bottom: 20vh;
 }
 
 
@@ -141,7 +142,6 @@ html, body {
 #sectionThree{
 	height: 100vh;
 	position: relative;
-	overflow: hidden;
 }
 
 
